Fix extra margin beneath expiration date

--- a/client/app/cart/cart.scss
+++ b/client/app/cart/cart.scss
@@ -1,7 +1,3 @@
-.input-group {
-    margin-bottom: 0px!important;
-}
-
 .what {
     font-weight: bold;
 }
